syntax = "proto3";

package shortener;

option go_package = "shortener/proto";

service Shortener {
  rpc Shorten(URLRequest) returns (URLResponse);
  rpc GetOriginal(ShortURLRequest) returns (OriginalURLResponse);
}

message URLRequest {
  string url = 1;
}

message URLResponse {
  string short = 1;
}

message ShortURLRequest {
  string short = 1;
}

message OriginalURLResponse {
  string original = 1;
}